--- a/test/fixtures/personalities.yml
+++ b/test/fixtures/personalities.yml
@@ -1,13 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  extraversion: 1
-  openness: 1
-  agreeableness: 1
-  conscientiousness: 1
+  type: 
 
 two:
-  extraversion: 1
-  openness: 1
-  agreeableness: 1
-  conscientiousness: 1
+  type: 
